--- a/archives/toutiao-search/2023-11-18.md
+++ b/archives/toutiao-search/2023-11-18.md
@@ -1,55 +1,81 @@
 # 2023-11-18
 
-共 222 条
+共 245 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Nov 18 2023 14:00:58 GMT+0800 (China Standard Time) -->
-1. [大学教师非法购买农村宅基地被强执](https://so.toutiao.com/search?keyword=大学教师非法购买农村宅基地被强执)
+<!-- 最后更新时间 Sat Nov 18 2023 15:00:42 GMT+0800 (China Standard Time) -->
+1. [哈登3+1准绝杀 快船胜火箭止6连败](https://so.toutiao.com/search?keyword=哈登3+1准绝杀+快船胜火箭止6连败)
 1. [台名嘴评拜登称赞红旗车并探头细看](https://so.toutiao.com/search?keyword=台名嘴评拜登称赞红旗车并探头细看)
 1. [推动亚太合作再出发](https://so.toutiao.com/search?keyword=推动亚太合作再出发)
-1. [女孩突发高热惊厥护士“跨栏”飞奔](https://so.toutiao.com/search?keyword=女孩突发高热惊厥护士“跨栏”飞奔)
-1. [坦克700 Hi4-T预售价70万](https://so.toutiao.com/search?keyword=坦克700+Hi4-T预售价70万)
-1. [余承东：智界问界后还有2个“界”](https://so.toutiao.com/search?keyword=余承东：智界问界后还有2个“界”)
+1. [樊登畅聊上海科创教育](https://so.toutiao.com/search?keyword=樊登畅聊上海科创教育)
+1. [爸爸哄小女儿吃药 大女儿直接上手](https://so.toutiao.com/search?keyword=爸爸哄小女儿吃药+大女儿直接上手)
 1. [马云办公室回应减持1000万股股票](https://so.toutiao.com/search?keyword=马云办公室回应减持1000万股股票)
-1. [哈登生涯助攻数超越托尼·帕克](https://so.toutiao.com/search?keyword=哈登生涯助攻数超越托尼·帕克)
-1. [余承东说智界S7比小米汽车更帅](https://so.toutiao.com/search?keyword=余承东说智界S7比小米汽车更帅)
-1. [银行疯抢“个人养老金”](https://so.toutiao.com/search?keyword=银行疯抢“个人养老金”)
+1. [詹姆斯距生涯39000分大关仅差42分](https://so.toutiao.com/search?keyword=詹姆斯距生涯39000分大关仅差42分)
+1. [女子梦见丈夫出轨调查发现是真的](https://so.toutiao.com/search?keyword=女子梦见丈夫出轨调查发现是真的)
+1. [余承东：智界问界后还有2个“界”](https://so.toutiao.com/search?keyword=余承东：智界问界后还有2个“界”)
+1. [詹姆斯湖人生涯第108次砍30+](https://so.toutiao.com/search?keyword=詹姆斯湖人生涯第108次砍30+)
 1. [宝马车主扬言回局里说话？警方辟谣](https://so.toutiao.com/search?keyword=宝马车主扬言回局里说话？警方辟谣)
 1. [明学昌大儿子截瘫未被通缉](https://so.toutiao.com/search?keyword=明学昌大儿子截瘫未被通缉)
-1. [本轮巴以冲突致双方超1.34万人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突致双方超1.34万人死亡)
+1. [大学教师非法购买农村宅基地被强执](https://so.toutiao.com/search?keyword=大学教师非法购买农村宅基地被强执)
 1. [73岁港星回应为电诈头目祝寿](https://so.toutiao.com/search?keyword=73岁港星回应为电诈头目祝寿)
-1. [电影《劫数难逃》上线](https://so.toutiao.com/search?keyword=电影《劫数难逃》上线)
 1. [羽生结弦离婚原因](https://so.toutiao.com/search?keyword=羽生结弦离婚原因)
-1. [女小生走红：老公不是性别而是感觉](https://so.toutiao.com/search?keyword=女小生走红：老公不是性别而是感觉)
 1. [蔡国庆披斗篷重游什刹海](https://so.toutiao.com/search?keyword=蔡国庆披斗篷重游什刹海)
-1. [詹姆斯35+5+9 湖人轻取开拓者](https://so.toutiao.com/search?keyword=詹姆斯35+5+9+湖人轻取开拓者)
+1. [女小生走红：老公不是性别而是感觉](https://so.toutiao.com/search?keyword=女小生走红：老公不是性别而是感觉)
+1. [景甜现场摸许凯腹肌](https://so.toutiao.com/search?keyword=景甜现场摸许凯腹肌)
 1. [公交公司回应小伙车上拉大便](https://so.toutiao.com/search?keyword=公交公司回应小伙车上拉大便)
+1. [普京：称俄应退出联合国是无稽之谈](https://so.toutiao.com/search?keyword=普京：称俄应退出联合国是无稽之谈)
+1. [马航MH370事件过去9年有哪些新进展](https://so.toutiao.com/search?keyword=马航MH370事件过去9年有哪些新进展)
+1. [揭秘制片主任工资能挣多少](https://so.toutiao.com/search?keyword=揭秘制片主任工资能挣多少)
+1. [王子奇新剧发言好炸裂](https://so.toutiao.com/search?keyword=王子奇新剧发言好炸裂)
+1. [郑州暴雨被问责官员陈宏伟任市委常委](https://so.toutiao.com/search?keyword=郑州暴雨被问责官员陈宏伟任市委常委)
+1. [银行疯抢“个人养老金”](https://so.toutiao.com/search?keyword=银行疯抢“个人养老金”)
+1. [余承东说智界S7比小米汽车更帅](https://so.toutiao.com/search?keyword=余承东说智界S7比小米汽车更帅)
+1. [如何看待多家银行下调存款利率](https://so.toutiao.com/search?keyword=如何看待多家银行下调存款利率)
+1. [出租车误入“S弯”进退两难](https://so.toutiao.com/search?keyword=出租车误入“S弯”进退两难)
+1. [快船将戴德蒙加入发展联盟球队名单](https://so.toutiao.com/search?keyword=快船将戴德蒙加入发展联盟球队名单)
+1. [马德兴：国足胜泰国拿到近10个积分](https://so.toutiao.com/search?keyword=马德兴：国足胜泰国拿到近10个积分)
+1. [警方调查农户4千只鸭子集体死亡](https://so.toutiao.com/search?keyword=警方调查农户4千只鸭子集体死亡)
+1. [刘亦菲大方回应男粉表白](https://so.toutiao.com/search?keyword=刘亦菲大方回应男粉表白)
+1. [韩国瑜将列中国国民党不分区民代首位](https://so.toutiao.com/search?keyword=韩国瑜将列中国国民党不分区民代首位)
+1. [中国“霸总”爽剧在海外杀疯了](https://so.toutiao.com/search?keyword=中国“霸总”爽剧在海外杀疯了)
+1. [俄军出动自爆装甲车对付乌军](https://so.toutiao.com/search?keyword=俄军出动自爆装甲车对付乌军)
+1. [网友夸淄博：热心事数也数不完](https://so.toutiao.com/search?keyword=网友夸淄博：热心事数也数不完)
+1. [日本海底火山喷发形成一座新岛屿](https://so.toutiao.com/search?keyword=日本海底火山喷发形成一座新岛屿)
+1. [蔡正元：美国学界商界反省台湾问题](https://so.toutiao.com/search?keyword=蔡正元：美国学界商界反省台湾问题)
+1. [微软回应OpenAI首席执行官被罢免](https://so.toutiao.com/search?keyword=微软回应OpenAI首席执行官被罢免)
+1. [炮声旁的中缅边境小城](https://so.toutiao.com/search?keyword=炮声旁的中缅边境小城)
+1. [互联网夜校能替代传统课堂吗](https://so.toutiao.com/search?keyword=互联网夜校能替代传统课堂吗)
+1. [卡德罗夫在射击场检验儿子枪法](https://so.toutiao.com/search?keyword=卡德罗夫在射击场检验儿子枪法)
+1. [快船：球队已正式与中锋泰斯签约](https://so.toutiao.com/search?keyword=快船：球队已正式与中锋泰斯签约)
+1. [王鹤棣亲手认证白鹿发量](https://so.toutiao.com/search?keyword=王鹤棣亲手认证白鹿发量)
+1. [央行等三部门：加大保交楼金融支持](https://so.toutiao.com/search?keyword=央行等三部门：加大保交楼金融支持)
+1. [阿来称《小王子》比所有童话都伟大](https://so.toutiao.com/search?keyword=阿来称《小王子》比所有童话都伟大)
+1. [马斯克再表态：中国一定会统一](https://so.toutiao.com/search?keyword=马斯克再表态：中国一定会统一)
+1. [证监会修订首次发行股票监管规定](https://so.toutiao.com/search?keyword=证监会修订首次发行股票监管规定)
+1. [关晓彤cos敦煌飞天](https://so.toutiao.com/search?keyword=关晓彤cos敦煌飞天)
+1. [美国前总统卡特夫妇接受临终关怀](https://so.toutiao.com/search?keyword=美国前总统卡特夫妇接受临终关怀)
+1. [女孩突发高热惊厥护士“跨栏”飞奔](https://so.toutiao.com/search?keyword=女孩突发高热惊厥护士“跨栏”飞奔)
+1. [坦克700 Hi4-T预售价70万](https://so.toutiao.com/search?keyword=坦克700+Hi4-T预售价70万)
+1. [哈登生涯助攻数超越托尼·帕克](https://so.toutiao.com/search?keyword=哈登生涯助攻数超越托尼·帕克)
+1. [本轮巴以冲突致双方超1.34万人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突致双方超1.34万人死亡)
+1. [电影《劫数难逃》上线](https://so.toutiao.com/search?keyword=电影《劫数难逃》上线)
+1. [詹姆斯35+5+9 湖人轻取开拓者](https://so.toutiao.com/search?keyword=詹姆斯35+5+9+湖人轻取开拓者)
 1. [美国犹太裔众议员呼吁巴以停火](https://so.toutiao.com/search?keyword=美国犹太裔众议员呼吁巴以停火)
 1. [医生举报科室为拿回扣用贵40倍注射液](https://so.toutiao.com/search?keyword=医生举报科室为拿回扣用贵40倍注射液)
-1. [马航MH370事件过去9年有哪些新进展](https://so.toutiao.com/search?keyword=马航MH370事件过去9年有哪些新进展)
 1. [以高官敦促以军“烧毁”加沙地带](https://so.toutiao.com/search?keyword=以高官敦促以军“烧毁”加沙地带)
-1. [景甜现场摸许凯腹肌](https://so.toutiao.com/search?keyword=景甜现场摸许凯腹肌)
 1. [ChatGPT之父：中国在AI领域会很出色](https://so.toutiao.com/search?keyword=ChatGPT之父：中国在AI领域会很出色)
-1. [刘亦菲大方回应男粉表白](https://so.toutiao.com/search?keyword=刘亦菲大方回应男粉表白)
 1. [餐厅被曝用福寿螺做饭？店方回应](https://so.toutiao.com/search?keyword=餐厅被曝用福寿螺做饭？店方回应)
 1. [干饭最积极的猫咪](https://so.toutiao.com/search?keyword=干饭最积极的猫咪)
-1. [郑州暴雨被问责官员陈宏伟任市委常委](https://so.toutiao.com/search?keyword=郑州暴雨被问责官员陈宏伟任市委常委)
-1. [网友夸淄博：热心事数也数不完](https://so.toutiao.com/search?keyword=网友夸淄博：热心事数也数不完)
 1. [iCAR 03亮相2023广州车展](https://so.toutiao.com/search?keyword=iCAR+03亮相2023广州车展)
-1. [卡德罗夫在射击场检验儿子枪法](https://so.toutiao.com/search?keyword=卡德罗夫在射击场检验儿子枪法)
-1. [中国“霸总”爽剧在海外杀疯了](https://so.toutiao.com/search?keyword=中国“霸总”爽剧在海外杀疯了)
 1. [总台记者探访波乌边境](https://so.toutiao.com/search?keyword=总台记者探访波乌边境)
 1. [2岁男童患白血病随时有生命危险](https://so.toutiao.com/search?keyword=2岁男童患白血病随时有生命危险)
 1. [老牌国货羽绒服今年卖疯了](https://so.toutiao.com/search?keyword=老牌国货羽绒服今年卖疯了)
 1. [专家解答糖尿病逆转](https://so.toutiao.com/search?keyword=专家解答糖尿病逆转)
 1. [《宁安如梦》谢危的爱永远拿得出手](https://so.toutiao.com/search?keyword=《宁安如梦》谢危的爱永远拿得出手)
-1. [韩国瑜将列中国国民党不分区民代首位](https://so.toutiao.com/search?keyword=韩国瑜将列中国国民党不分区民代首位)
 1. [奥特曼回应被OpenAI董事会开除](https://so.toutiao.com/search?keyword=奥特曼回应被OpenAI董事会开除)
 1. [美国前总统卡特的妻子接受临终关怀](https://so.toutiao.com/search?keyword=美国前总统卡特的妻子接受临终关怀)
-1. [日本海底火山喷发形成一座新岛屿](https://so.toutiao.com/search?keyword=日本海底火山喷发形成一座新岛屿)
 1. [媒体：网络不是肮脏的“人性厕所”](https://so.toutiao.com/search?keyword=媒体：网络不是肮脏的“人性厕所”)
 1. [澳门旅游局长：游澳门从土生菜开始](https://so.toutiao.com/search?keyword=澳门旅游局长：游澳门从土生菜开始)
-1. [警方调查农户4千只鸭子集体死亡](https://so.toutiao.com/search?keyword=警方调查农户4千只鸭子集体死亡)
 1. [媒体：校园食品安全不容“试错”](https://so.toutiao.com/search?keyword=媒体：校园食品安全不容“试错”)
 1. [利物浦市长：对埃弗顿的处罚过度](https://so.toutiao.com/search?keyword=利物浦市长：对埃弗顿的处罚过度)
 1. [驻华外交官体验非遗福建魅力](https://so.toutiao.com/search?keyword=驻华外交官体验非遗福建魅力)
@@ -71,7 +97,6 @@
 1. [教育部回应汉语拼音“o”读法](https://so.toutiao.com/search?keyword=教育部回应汉语拼音“o”读法)
 1. [山东潍坊人大常委会委员殷修湖被查](https://so.toutiao.com/search?keyword=山东潍坊人大常委会委员殷修湖被查)
 1. [恩比德对阵老鹰拿下32分7板8助](https://so.toutiao.com/search?keyword=恩比德对阵老鹰拿下32分7板8助)
-1. [揭秘制片主任工资能挣多少](https://so.toutiao.com/search?keyword=揭秘制片主任工资能挣多少)
 1. [世卫：非常担忧疾病在加沙地带蔓延](https://so.toutiao.com/search?keyword=世卫：非常担忧疾病在加沙地带蔓延)
 1. [媒体：巩固电影市场好势头](https://so.toutiao.com/search?keyword=媒体：巩固电影市场好势头)
 1. [网红团队为农村母校修路](https://so.toutiao.com/search?keyword=网红团队为农村母校修路)
@@ -151,7 +176,6 @@
 1. [国务院任免国家工作人员](https://so.toutiao.com/search?keyword=国务院任免国家工作人员)
 1. [官方回应货车过磅正常但不放行](https://so.toutiao.com/search?keyword=官方回应货车过磅正常但不放行)
 1. [极氪007广州车展开启预售](https://so.toutiao.com/search?keyword=极氪007广州车展开启预售)
-1. [关晓彤cos敦煌飞天](https://so.toutiao.com/search?keyword=关晓彤cos敦煌飞天)
 1. [参与缅甸诈骗550万 26人团伙被公审](https://so.toutiao.com/search?keyword=参与缅甸诈骗550万+26人团伙被公审)
 1. [大货车过磅正常女收费员称目测超重](https://so.toutiao.com/search?keyword=大货车过磅正常女收费员称目测超重)
 1. [18岁父亲有个4岁儿子 律师回应](https://so.toutiao.com/search?keyword=18岁父亲有个4岁儿子+律师回应)
@@ -218,7 +242,6 @@
 1. [丰田世极SUV亮相](https://so.toutiao.com/search?keyword=丰田世极SUV亮相)
 1. [5位茅奖作家乌镇签书签到手酸](https://so.toutiao.com/search?keyword=5位茅奖作家乌镇签书签到手酸)
 1. [蔚来员工爆料为保工作买蔚来仍被裁](https://so.toutiao.com/search?keyword=蔚来员工爆料为保工作买蔚来仍被裁)
-1. [阿来称《小王子》比所有童话都伟大](https://so.toutiao.com/search?keyword=阿来称《小王子》比所有童话都伟大)
 1. [菲律宾一名新当选议员在商店遭枪杀](https://so.toutiao.com/search?keyword=菲律宾一名新当选议员在商店遭枪杀)
 1. [美国男子沙漠迷路吃蝌蚪充饥终获救](https://so.toutiao.com/search?keyword=美国男子沙漠迷路吃蝌蚪充饥终获救)
 1. [贝尔萨：击败阿根廷并不能带来什么](https://so.toutiao.com/search?keyword=贝尔萨：击败阿根廷并不能带来什么)
